@@ -1,13 +1,10 @@
+*.o
+*.l[ao]
 *.err
 *.out
-*.[ao]
-*.l[ao]
-
 .dirstamp
 
-test-consumer
 test-dispatcher-local-collision
 test-dispatcher-multiple-services
 test-dispatcher-simple-service
 test-dispatcher-subtypes
-test-publisher
